<resources>
    <string name="app_name">Film</string>
    <string name="photo">photo</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="favorites">Favorites</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="duration">"%1$s minutes"</string>
    <string name="episodes">"%1$s episodes"</string>
    <string name="seasons">"%1$s seasons"</string>
    <string name="genre">Genre</string>
    <string name="descriptions">Descriptions</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>
</resources>