<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/black"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/photo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/iv_detail"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@id/iv_detail">

            <TextView
                style="@style/TvTittle"
                android:id="@+id/tv_titleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"/>
            <TextView
                style="@style/TvDetail"
                android:id="@+id/tvRatingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                app:drawableRightCompat="@drawable/ic_baseline_star_rate_24" />
            <TextView
                style="@style/TvDetail"
                android:id="@+id/tvDateDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"/>
            <TextView
                style="@style/TvDetail"
                android:id="@+id/tvDurationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/duration"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/iv_detail"
            android:layout_marginTop="26dp">

            <TextView
                style="@style/TvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre" />
            <TextView
                style="@style/TvDetail"
                android:id="@+id/tvGenreDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
            <TextView
                style="@style/TvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/descriptions"/>
            <TextView
                style="@style/TvDetail"
                android:id="@+id/tvDescriptionsDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>